adding jvm args